--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
+POSTGRES_USER=golangapp_user
+POSTGRES_PASSWORD=your-secure-password
+POSTGRES_DB=crud_db
 DB_HOST=postgres
 DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=crud_db
 DB_SSLMODE=disable
