--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,31 +5,45 @@ services:
     image: postgres:latest
     container_name: golang-ec2-postgres
     restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: crud_db
+    env_file:
+      - .env
     ports:
       - "5432:5432"
     volumes:
       - pg_data:/var/lib/postgresql/data
+    networks:
+      - backend_network
 
-  app:
-    build: .
+  # golang-app:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   container_name: golang-echo-app
+  #   restart: always
+  #   depends_on:
+  #     - postgres
+  #   env_file:
+  #     - .env
+  #   ports:
+  #     - "8080:8080"
+  #   networks:
+  #     - backend_network
+
+  golang-app:
+    image: radityaditoo/golang-echo-crud:latest
     container_name: golang-echo-app
+    restart: always
     depends_on:
       - postgres
-    ports:
-      - "8080:8080"
     env_file:
       - .env
-    # environment:
-    #   DB_HOST: postgres
-    #   DB_PORT: 5432
-    #   DB_USER: postgres
-    #   DB_PASSWORD: postgres
-    #   DB_NAME: crud_db
-    #   DB_SSLMODE: disable
+    ports:
+      - "8080:8080"
+    networks:
+      - backend_network
 
 volumes:
   pg_data:
+
+networks:
+  backend_network:
