--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,12 +41,12 @@ jobs:
       - name: Create .env File on EC2
         run: |
           cd /home/ubuntu/app
-          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" > .env
-          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
-          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
-          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
-          echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
-          echo "DB_SSLMODE=${{ secrets.DB_SSLMODE }}" >> .env
+          sudo sh -c 'echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" > .env'
+          sudo sh -c 'echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env'
+          sudo sh -c 'echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env'
+          sudo sh -c 'echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env'
+          sudo sh -c 'echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env'
+          sudo sh -c 'echo "DB_SSLMODE=${{ secrets.DB_SSLMODE }}" >> .env'
 
       - name: Pull latest Docker image
         run: |
